add message api
