# src/server.js
@@ -2,7 +2,10 @@ const express = require('express');
 const cors = require('cors');
 const db = require('./db.js');
 
+const { authenticateUser } = require('./utils/utils.js')
+
 const auth = require('./api/auth.js');
+const messages = require('./api/messages');
 const docs = require('./utils/api-doc.js');
 
 const init = () => {
@@ -15,6 +18,8 @@ const init = () => {
 
     // routers
     app.use('/', auth);
+    app.use('/messages', authenticateUser, messages);
+
     app.use('/api', docs);
 
     const port = 8080;
